# MyScripts

./: .gitattributes  .gitignore  .gitmodules  GlobalHotkey.ahk  MainDialog.ui  autoreload.py  gui.py  install.cmd  jsconfig.json  main.py  main_console.py  main_console.sh  mypy.ini  myscripts  myscripts.cmd  myscripts.py  package-lock.json  package.json  requirement.txt  requirements.txt  run  run.cmd  run.py  run.sh  variables.json
.claude/: settings.local.json
ahk/: ChromeHotkey.ahk  ExplorerHelper.ahk  GetSelectedText.ahk  ScreenRecord.ahk  VirtualDesktop.ahk  WaitKey.ahk  WinDrag.ahk  Window.ahk  hotkeys.ahk
data/: ConEmu.xml
install/: find_python.cmd  install.cmd  install.ps1  install_all.cmd  install_all_elivated.cmd  install_autohotkey.cmd  install_autohotkey.ps1  install_choco.cmd  install_choco_elivated.cmd  install_python.cmd  install_required_packages.ps1  runas.vbs
jslib/: _userscript.js  _web.js
libs/: _ScreenRecord.ahk  _activate_pycharm.ahk  _android.py  _appmanager.py  _audio.py  _browser.py  _cache.py  _clip.py  _cmake.py  _code.py  _conda.py  _cpp.py  _editor.py  _ext.py  _filelock.py  _filemgr.py  _git.py  _grep.py  _gui.py  _image.py  _input.py  _jsonedit.py  _math.py  _menu.py  _perfetto.py  _pkgmanager.py  _pycharm.py  _pyenv.py  _sci.py  _script.py  _scriptmanager.py  _scriptserver.py  _select_file.py  _server.py  _setup_android_env.py  _shutil.py  _template.py  _term.py  _textinput.py  _ue4.py  (+9 more)
resources/: alacritty.yml
scripts/r/cmd2exe/: CMakeLists.txt  compile.cmd  src.cpp
settings/: alacritty-compact.yml  alacritty.toml  (+3 more)
(+2842 files in other folders)
